<resources>    <string name="app_name">LION APP</string>    <string name="action_settings">Settings</string>    <string name="feed_image_contentDiscription">Feed Image</string>    <string name="date">eknfka</string>    <string name="feed">jsefkjsajnas \nlkwhfwnrstea reatae taesta sasya st\nwehqi\nejhrqihdsgsdfgdsgszgdsf\nqwkhqihwrqnwrjfqnjnfnef</string>    <string name="userInage">user Image</string>    <string name="About">About</string>    <string name="exit">Exit</string>    <string name="profileEdit">Profile</string>    <string name="navigationDrawer_open">Open navigation drawer</string>    <string name="navigationDrawer_close">Close navigation drawer</string>    <string name="unn_news">UNN News</string>    <string name="random_news">Random News</string>    <string name="profile">PROFILE</string>    <string name="tools">TOOLS</string>    <string name="no_connect">No Internet Connection</string>    <string name="on_connect">SWITCH ON</string>    <string name="null_caught">Failed retriving data.</string>    <string name="empty_db">ON MOBILE DATA FOR CONTENT</string>    <string name="loading_data">RETRIEVING CONTENT...</string>    <string name="try_again">RETRY</string>    <string name="progress">progress</string></resources>