<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android">        <item android:title="ANNOUNCEMENT"            >            <menu>                    <item android:id="@+id/unn_news"                        android:title="@string/unn_news"                        />            </menu>        </item>    <item android:title="@string/profile"        >        <menu>            <item android:id="@+id/profileEdit"                android:icon="@drawable/ic_user_profile_24dp"                android:titleCondensed="@string/profileEdit"                android:title="@string/profileEdit"                />        </menu>    </item>    <item android:title="@string/tools">        <menu>            <item android:id="@+id/settings"                android:icon="@drawable/_ic_settings_24dp"                android:title="@string/action_settings"/>            <item android:id="@+id/about"                android:icon="@android:drawable/ic_menu_info_details"                android:title="@string/About"                />            <item android:id="@+id/exit"                android:icon="@android:drawable/ic_menu_close_clear_cancel"                android:title="@string/exit"/>        </menu>    </item></menu>